Add resume file

--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <body>
-    Resume
-  </body
-</head>
-</html
+  <head>
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="style.css" />
+  </head>
+<body>
+  <div class="header">
+  <p class="logo">LS</p>
+  <nav>
+    <a class="nav-item" href="index.html">About</a>
+    <a class="nav-item" href="resume.html">Resume</a>
+  </nav>
+    </div>
+    <h1>Resume</h1>
+    <img src="resume.png"
+    <div>
+      <a href="resume.pdf">Download Resume</a>
+</div>
+</body>
+</html>
